[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/img/GUI/Space_BG_04.png" type="Texture" id=1]
[ext_resource path="res://level/GUI/GeneralMenu.gd" type="Script" id=2]
[ext_resource path="res://level/GUI/AudioMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://level/GUI/Credit.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/font/StrenuousBL16.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/font/StrenuousBL52.tres" type="DynamicFont" id=6]

[node name="GeneralMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 958.0
margin_bottom = 1080.0
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_left = 379.0
margin_top = 108.0
margin_right = 579.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Start"

[node name="OptionButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_left = 379.0
margin_top = 379.0
margin_right = 579.0
margin_bottom = 429.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Options"

[node name="CreditButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_left = 379.0
margin_top = 650.0
margin_right = 579.0
margin_bottom = 700.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Credit"

[node name="ExitButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_left = 379.0
margin_top = 921.0
margin_right = 579.0
margin_bottom = 971.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Exit"

[node name="Container" type="Container" parent="HBoxContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Sprite" type="Sprite" parent="HBoxContainer/Container"]
position = Vector2( -1.88015, 540.197 )
rotation = 1.5708
scale = Vector2( 1.00036, 1.00012 )
z_index = -1
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 1224.0
margin_top = 220.0
margin_right = 1361.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 6 )
text = "Lunar Defender"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
margin_left = -104.0
margin_top = 316.0
margin_right = 526.0
margin_bottom = 379.0
custom_fonts/font = ExtResource( 6 )
text = "Game Off 2020 Release"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioMenu" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -736.0
margin_top = -416.0
margin_right = 736.0
margin_bottom = 416.0

[node name="Credit" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -448.0
margin_right = 800.0
margin_bottom = 448.0
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
